tests/transpiler/x/rs/match_full.error
rustc: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/match_full.rs:3:12
  |
2 | fn classify(n: i64) -> String {
  |                        ------ expected `String` because of return type
3 |     return match n { 0 => "zero", 1 => "one", _ => "many", }.clone()
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
  |            |                                                 |
  |            |                                                 help: try using a conversion method: `to_string`
  |            expected `String`, found `&str`

error[E0308]: mismatched types
 --> /workspace/mochi/tests/transpiler/x/rs/match_full.rs:8:25
  |
8 |     let label: String = match x { 1 => "one", 2 => "two", 3 => "three", _ => "unknown", }.clone();
  |                ------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
  |                |        |                                                                 |
  |                |        |                                                                 help: try using a conversion method: `to_string`
  |                |        expected `String`, found `&str`
  |                expected due to this

error[E0308]: mismatched types
  --> /workspace/mochi/tests/transpiler/x/rs/match_full.rs:11:24
   |
11 |     let mood: String = match day { "mon" => "tired", "fri" => "excited", "sun" => "relaxed", _ => "normal", }.clone();
   |               ------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
   |               |        |                                                                                      |
   |               |        |                                                                                      help: try using a conversion method: `to_string`
   |               |        expected `String`, found `&str`
   |               expected due to this

error[E0308]: mismatched types
  --> /workspace/mochi/tests/transpiler/x/rs/match_full.rs:14:26
   |
14 |     let status: String = match ok { true => "confirmed", false => "denied", }.clone();
   |                 ------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----^^
   |                 |        |                                                    |
   |                 |        |                                                    help: try using a conversion method: `to_string`
   |                 |        expected `String`, found `&str`
   |                 expected due to this

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
