tests/transpiler/x/rs/match_full.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
fn classify(n: i64) -> String {
    return match n { 0 => "zero", 1 => "one", _ => "many", }.clone()
}

fn main() {
    let x: i64 = 2;
    let label: String = match x { 1 => "one", 2 => "two", 3 => "three", _ => "unknown", }.clone();
    println!("{}", label);
    let day = "sun";
    let mood: String = match day { "mon" => "tired", "fri" => "excited", "sun" => "relaxed", _ => "normal", }.clone();
    println!("{}", mood);
    let ok: bool = true;
    let status: String = match ok { true => "confirmed", false => "denied", }.clone();
    println!("{}", status);
    println!("{}", classify(0));
    println!("{}", classify(5));
}
